fix the webpack config and hide the html scrollbar with css

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,10 @@ body {
     gap: 60px;
 }
 
+html::-webkit-scrollbar {
+    display: none;
+}
+
 header {
     min-height: 100px;
     width: 100%;
